# bat-desktop

./: .gitignore  CMakeLists.txt  LEARNINGS.txt  Readme.md  TODO.md  baseline.txt  bat_desktop.cpp  c_classify.c  c_classify.h  calc_tex.h  capture0975.raw  classify.cpp  classify.h  create_image.c  create_image.h  create_image_cross.c  create_image_meow.c  flo_file.h  flo_matrix.h  flo_pixmap.h  flo_queue.h  flo_shader.h  flo_time.h  fragment_shader.glsl  glad.h  lib.c  main.c  mainf.cpp  mylabel.cpp  mylabel.h  nuklear.h  nuklear_sdl_gl3.h  renderarea.cpp  renderarea.h  sub_texture.c  sub_texture.h  test1.c  vertex_shader.glsl  window.cpp  window.h
